--- a/config/.config/polybar/config
+++ b/config/.config/polybar/config
@@ -56,7 +56,7 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm
-;modules-center = mpd
+modules-center = spotify
 modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
 
 tray-position = right
@@ -76,6 +76,14 @@ tray-padding = 2
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/spotify]
+type = custom/script
+interval = 1
+format-prefix = " "
+format = <label>
+exec = python /usr/share/polybar/scripts/spotify_status.py -t 75 -f '{play_pause} {artist}: {song}'
+format-underline = #1db954
 
 [module/xwindow]
 type = internal/xwindow
