added nvim plugins folder to gitingore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ st/st/st.o
 st/st/x.o
 st/st/config.old.h
 config/.config/systemd/user/*.wants
+slock/slock/*.o
+slock/slock/slock
+config/.config/nvim/plugged
