--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ st/st/st.o
 st/st/x.o
 st/st/config.old.h
 config/.config/systemd/user/*.wants
-slock/slock/*.o
+slock/slock/slock.o
+slock/slock/explicit_bzero.o
 slock/slock/slock
 config/.config/nvim/plugged
 local/.local/share/nvim/*
